# Otter

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  run-hooks.bat  setup.bat  submit.py
rust_utils/: Cargo.toml
rust_utils/src/: lib.rs
src/: appearance.cfg  bot.cfg  bot.py  bot_requirements.txt  profile_bot.py  profile_match.cfg
src/move/: aerial.py  chase_ball.py  directed_drive.py  double_jump.py  drive.py  escape_wall.py  followup.py  goto.py  half_flip.py  idle.py  move.py  pickup_boost.py  recovery.py  speed_flip.py
src/move/kickoff/: corner_kickoff.py  do_kickoff.py  offcentre_kickoff.py  straight_kickoff.py
src/move/nav/: nav_strike.py
src/rlutilities/: __init__.py  __init__.pyi  linear_algebra.pyi  mechanics.pyi  rlutilities.cp37-win_amd64.pyd  simulation.pyi
src/strategy/: default_strategy.py  soccar_strategy.py  strategy.py  test_strategy.py
src/util/: orientation.py  vec.py
src/utils/: aiming.py  angles.py  const.py  drive_estimation.py  drive_sim.py  game_info.py  goal_prediction.py  jump_prediction.py  jump_sim.py  match_settings.py  rendering.py  rendering.pyi  tmcp.py  vectors.py
tools/: double_jump_tuner.py  drive_sim.py  jump_tuner.py  stock_zsr_appearance.cfg  tuner.py
tools/profile/: profile_bot.cfg  profile_bot.py  profile_match.cfg
tools/recorder/: recorder_bot.cfg  recorder_bot.py  recorder_match.cfg  run.bat
tools/tcmp_tracker/: script.cfg  tmcp_tracker.py
tools/tuner/: double_jump_tuner.py  drive_tuner.py  jump_tuner.py  tuner.py
training/: aerial.py  goalie.py  vec.py
(+8 files in other folders)
